[build-system]
requires = ["setuptools>=69", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "missalemeum-backend"
dynamic = ["version"]
description = "Missale Meum backend API"
requires-python = ">=3.13"
dependencies = [
  "python-dateutil~=2.9.0",
  "click~=8.3.1",
  "fastapi~=0.129.0",
  "uvicorn[standard]~=0.40.0",
  "gunicorn~=25.1.0",
  "icalendar~=7.0.0",
  "trans~=2.1.0",
  "mistune~=3.2.0",
  "PyYAML~=6.0.3",
  "weasyprint~=68.1",
  "pypdf~=6.7.0",
  "diskcache==5.6.3",
]

[project.optional-dependencies]
test = [
  "pytest~=9.0.2",
  "httpx~=0.28.1",
]
lint = [
  "flake8~=7.3.0",
]
dev = [
  "pytest~=9.0.2",
  "httpx~=0.28.1",
  "flake8~=7.3.0",
]

[project.scripts]
missale-cli = "api.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "pdf*"]
exclude = ["tests*", "resources*"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>.*)$"
fallback_version = "0.0.0"
write_to = "api/_version.py"
